[package]
name = "pingora_proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
pingora = { version = "0.6", features = ["openssl"] }
pingora-core = "0.6"
pingora-proxy = "0.6"
pingora-http = "0.6"
pingora-load-balancing = "0.6"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
structopt = "0.3.26"
dotenvy = "0.15.7"
serde_json = "1.0.143"
reqwest = { version = "0.11", features = ["json"] }
futures = "0.3"
rand = "0.8.5"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["clock"] }